--- a/qr/qrscanner/pubspec.yaml
+++ b/qr/qrscanner/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path_provider: ^1.6.27
   sqflite: ^1.3.2+3
   url_launcher: ^6.0.2
+  google_maps_flutter: ^1.0.6
 
 dev_dependencies:
   flutter_test:
