--- a/qr/qrscanner/.vscode/launch.json
+++ b/qr/qrscanner/.vscode/launch.json
@@ -10,6 +10,7 @@
 
 
 
+
     // {
     //     "name": "Launch Chrome",
     //     "request": "launch",
@@ -25,20 +26,19 @@
             "type": "dart",
             "deviceId": "emulator-5554"
         },
-    //     {
-    //         "name": "Android",
-    //         "request": "launch",
-    //         "type": "dart",
-    //         "deviceId": "7c128f0c"
-    //     },
+        {
+            "name": "Android",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "7c128f0c"
+        },
         
-    // ],
-    // "compounds": [
-    //     {
-    //         "name": "All Devices",
-    //         "configurations": ["Android", "qrscanner"],
-    //     }
-    // ] 
+    ],
+    "compounds": [
+        {
+            "name": "All Devices",
+            "configurations": ["Android", "qrscanner"],
+        }
+    ] 
 
-    ]
 } 
