--- a/firebase_login/firebase_login/.vscode/launch.json
+++ b/firebase_login/firebase_login/.vscode/launch.json
@@ -4,12 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
     
         {
             "name": "firebase_login",
             "request": "launch",
             "type": "dart",
             "deviceId": "192.168.0.4:1031"
+        },
+        {
+            "name": "Emulator",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "emulator-5554"
         }
     ]
 }
