--- a/peliculas/.vscode/launch.json
+++ b/peliculas/.vscode/launch.json
@@ -4,10 +4,17 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "name": "peliculas",
             "request": "launch",
             "type": "dart"
+        },
+        {
+            "name": "peliculas Mobile",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "192.168.0.3:1031"
         }
     ]
 }
